Update neighbourhood naming via postal code

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -474,7 +474,7 @@
         "    'M4R': 'Central Toronto (North Toronto West)',\n",
         "    'M5K': 'Downtown Toronto (Toronto Dominion Centre / Design Exchange)',\n",
         "    'M5S': 'Downtown Toronto (University of Toronto / Harbord)',\n",
-        "    'M3K': 'Downsview East (CFB Toronto)',\n",
+        "    'M3K': 'Other', # previously 'Downsview East (CFB Toronto)'\n",
         "    'M4E': 'East Toronto (The Beaches)',\n",
         "    'M4J': 'East Toronto (The Danforth East)',\n",
         "    'M4M': 'East Toronto (Studio District)',\n",
@@ -504,7 +504,7 @@
         "    'M5T': 'Downtown Toronto (Kensington Market / Chinatown / Grange Park)',\n",
         "    'M6P': 'West Toronto (High Park / The Junction South)',\n",
         "    'M6S': 'West Toronto (Bloor West Village / Swansea)',\n",
-        "    'M8V': 'Etobicoke (New Toronto / Mimico South / Humber Bay Shores)',\n",
+        "    'M8V': 'West Toronto (New Toronto / Mimico South / Humber Bay Shores)', # previously 'Etobicoke (New Toronto / Mimico South / Humber Bay Shores)'\n",
         "    'M4V': 'Central Toronto (Summerhill West / Rathnelly / South Hill / Forest Hill SE / Deer Park)',\n",
         "    'M5V': 'Downtown Toronto (CN Tower / King and Spadina / Railway Lands / Harbourfront West / Bathurst Quay / South Niagara / YTZ)',\n",
         "    'M5W': 'Downtown Toronto Stn A PO Boxes 25 The Esplanade (Enclave of M5E)',\n",
