Remove data from cities outside of Toronto

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -592,7 +592,12 @@
         "    nei.append(result)\n",
         "\n",
         "MayNov.insert(0, \"Neighbourhood\", nei, True) \n",
-        "print(MayNov.shape)"
+        "print(MayNov.shape)\n",
+        "\n",
+        "# DROP CITIES LOCATED OUTSIDE OF TORONTO\n",
+        "cities_to_drop = [\"Ajax\", \"Aurora\", \"Brampton\", \"Concord\", \"London\", \"Markham\", \"Mississauga\", \"Oakville\", \"Pickering\", \"Richmond Hill\", \"Unionville\", \"Vaughan\", \"Waterloo\", \"Whitchurch-Stouffville\", \"Woodbridge\"]\n",
+        "for city in cities_to_drop:\n",
+        "    MayNov = MayNov.drop(MayNov[MayNov['location.city']==city].index)"
       ]
     },
     {
