Update file names for data comparison

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -434,7 +434,7 @@
       },
       "outputs": [],
       "source": [
-        "df_new.to_csv(\"May2021.csv\")"
+        "df_new.to_csv(\"Nov2021.csv\")"
       ]
     },
     {
@@ -635,16 +635,16 @@
         }
       ],
       "source": [
-        "May2020 = pd.read_excel('TO_rest_May2Nov_cleaned.xlsx')\n",
-        "May2021 = pd.read_excel('May2021.xlsx')\n",
+        "May2021 = pd.read_excel('May2021_REVISED.xlsx')\n",
+        "Nov2021 = pd.read_excel('MayNov2021_EMAILCHANGES02.xlsx')\n",
         "\n",
-        "#print(May2020.shape)\n",
         "#print(May2021.shape)\n",
-        "print(May2020.columns.to_list())\n",
+        "#print(Nov2021.shape)\n",
         "print(May2021.columns.to_list())\n",
+        "print(Nov2021.columns.to_list())\n",
         "\n",
-        "df1 = May2020[['id', 'name_x']]\n",
-        "df2 = May2021[['id', 'name']]\n",
+        "df1 = May2021[['id', 'name_x']]\n",
+        "df2 = Nov2021[['id', 'name']]\n",
         "print(\"size of cleaned dataset: \"+ str(df1.shape))\n",
         "print(\"size of newly aggregated dataset: \"+ str(df2.shape))\n",
         "df1 = pd.DataFrame(df1)\n",
@@ -702,33 +702,33 @@
         "# iterate through 2020 dataset and clasify them as closed and open\n",
         "openClose = []\n",
         "\n",
-        "for index, row in May2020.iterrows():\n",
+        "for index, row in May2021.iterrows():\n",
         "  if row['id'] in closed_dict:\n",
         "    openClose.append('Closed')\n",
         "  else:\n",
         "    openClose.append('Open')\n",
         "\n",
-        "May2020.insert(0, \"2021 Assessment\", openClose, True)\n",
+        "May2021.insert(0, \"2021 Assessment\", openClose, True)\n",
         "\n",
-        "May2020.to_excel('Yelp2020_Reassessment.xlsx')\n",
+        "May2021.to_excel('Yelp2020_Reassessment.xlsx')\n",
         "\n",
         "# iterate through 2021 dataset and isolate the \"new\" restaurants\n",
         "# keep the first appearing category (alphabetical order)\n",
-        "May2021.drop_duplicates(subset =\"id\",\n",
+        "Nov2021.drop_duplicates(subset =\"id\",\n",
         "                     keep = \"first\", inplace = True)\n",
         "newOld = []\n",
         "\n",
-        "for index, row in May2021.iterrows():\n",
+        "for index, row in Nov2021.iterrows():\n",
         "  if row['id'] in new_dict:\n",
         "    newOld.append('New')\n",
         "  else:\n",
         "    newOld.append('Old')\n",
         "\n",
-        "May2021.insert(0, \"2021 Assessment\", newOld, True)\n",
+        "Nov2021.insert(0, \"2021 Assessment\", newOld, True)\n",
         "\n",
-        "May2021.to_excel('Yelp2021_Reassessment.xlsx')\n",
+        "Nov2021.to_excel('Yelp2021_Reassessment.xlsx')\n",
         "\n",
-        "print(May2021.shape)\n"
+        "print(Nov2021.shape)\n"
       ]
     }
   ],
