Remove duplicate entries from dataframes

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -638,33 +638,43 @@
         "May2021 = pd.read_excel('May2021_REVISED.xlsx')\n",
         "Nov2021 = pd.read_excel('MayNov2021_EMAILCHANGES02.xlsx')\n",
         "\n",
+        "print('BEFORE deleting cities:', May2021.shape)\n",
+        "cities_to_drop = [\"Ajax\", \"Aurora\", \"Brampton\", \"Concord\", \"London\", \"Markham\", \"Mississauga\", \"Oakville\", \"Pickering\", \"Richmond Hill\", \"Unionville\", \"Vaughan\", \"Waterloo\", \"Whitchurch-Stouffville\", \"Woodbridge\"]\n",
+        "for city in cities_to_drop:\n",
+        "    May2021 = May2021.drop(May2021[May2021['location.city_x']==city].index)\n",
+        "print('AFTER deleting cities:', May2021.shape)\n",
+        "\n",
         "#print(May2021.shape)\n",
         "#print(Nov2021.shape)\n",
         "print(May2021.columns.to_list())\n",
         "print(Nov2021.columns.to_list())\n",
         "\n",
+        "print('May2021 columns:', May2021.columns.to_list())\n",
+        "print('Nov2021 columns:', Nov2021.columns.to_list())\n",
+        "\n",
+        "print(\"May 2021 - BEFORE dropping duplicates: \" + str(May2021.shape))\n",
+        "May2021.drop_duplicates(subset =\"id\", keep = \"first\", inplace = True)\n",
+        "print(\"May 2021 - AFTER dropping duplicates: \" + str(May2021.shape))\n",
+        "\n",
+        "print(\"Nov. 2021 - BEFORE dropping duplicates: \" + str(Nov2021.shape))\n",
+        "Nov2021.drop_duplicates(subset =\"id\", keep = \"first\", inplace = True)\n",
+        "print(\"Nov. 2021 - AFTER dropping duplicates: \" + str(Nov2021.shape))\n",
+        "\n",
         "df1 = May2021[['id', 'name_x']]\n",
         "df2 = Nov2021[['id', 'name']]\n",
-        "print(\"size of cleaned dataset: \"+ str(df1.shape))\n",
-        "print(\"size of newly aggregated dataset: \"+ str(df2.shape))\n",
+        "\n",
         "df1 = pd.DataFrame(df1)\n",
         "df2 = pd.DataFrame(df2)\n",
-        "df1.rename(columns={'name_x':'name'}, inplace=True)\n",
         "\n",
-        "# 532 restaurants only in 2020\n",
-        "only_in_2020 = df1.merge(df2, how = 'outer' ,indicator=True).loc[lambda x : x['_merge']=='left_only']\n",
-        "# 666 restaurants only in 2021\n",
-        "only_in_2021 = df1.merge(df2, how = 'outer' ,indicator=True).loc[lambda x : x['_merge']=='right_only']\n",
-        "# occurs in both datastes\n",
-        "across_2020_2021 = df1.merge(df2, how = 'outer' ,indicator=True).loc[lambda x : x['_merge']=='both']\n",
+        "print(\"May 2021 - BEFORE dropping duplicates: \" + str(df1.shape))\n",
+        "df1.drop_duplicates(subset =\"id\", keep = \"first\", inplace = True)\n",
+        "print(\"May 2021 - AFTER dropping duplicates: \" + str(df1.shape))\n",
         "\n",
-        "print(\"closed: \" + str(only_in_2020.shape))\n",
-        "print(\"new: \" + str(only_in_2021.shape))\n",
+        "print(\"Nov. 2021 - BEFORE dropping duplicates: \" + str(df2.shape))\n",
+        "df2.drop_duplicates(subset =\"id\", keep = \"first\", inplace = True)\n",
+        "print(\"Nov. 2021 - AFTER dropping duplicates: \" + str(df2.shape))\n",
         "\n",
-        "# dropping ALL duplicte values\n",
-        "df2.drop_duplicates(subset =\"id\",\n",
-        "                     keep = \"first\", inplace = True)\n",
-        "print(\"After dropping duplicates: \" + str(df2.shape)) #~60% of restaurants only have 1 category and the rest have 2+ categories "
+        "df1.rename(columns={'name_x':'name'}, inplace=True)"
       ]
     },
     {
