Compare openings and closings in restaurant data

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -619,21 +619,7 @@
         "id": "uPevsk3dhmZy",
         "outputId": "42e91bcb-1f9c-4bc6-b7c8-1b9c724bf8ef"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Column1', 'id', 'Status', 'name_x', 'is_closed_x', 'review_count_x', 'Categories', 'Categority', 'categories_x', 'rating_x', 'phone_x', 'distance_x', 'coordinates.latitude_x', 'coordinates.longitude_x', 'location.address1_x', 'location.address2_x', 'location.address3_x', 'location.city_x', 'location.zip_code_x', 'location.country_x', 'location.state_x', 'Neighbourhood', 'Specific Neighbourhood']\n",
-            "['Unnamed: 0', 'Neighbourhood', 'Specific Neighbourhood', 'Unnamed: 0.1', 'id', 'alias', 'name', 'image_url', 'is_closed', 'url', 'review_count', 'categories', 'rating', 'transactions', 'price', 'phone', 'display_phone', 'distance', 'coordinates.latitude', 'coordinates.longitude', 'location.address1', 'location.address2', 'location.address3', 'location.city', 'location.zip_code', 'location.country', 'location.state', 'location.display_address']\n",
-            "size of cleaned dataset: (5978, 2)\n",
-            "size of newly aggregated dataset: (9016, 2)\n",
-            "closed: (532, 3)\n",
-            "new: (666, 3)\n",
-            "After dropping duplicates: (5836, 2)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "May2021 = pd.read_excel('May2021_REVISED.xlsx')\n",
         "Nov2021 = pd.read_excel('MayNov2021_EMAILCHANGES02.xlsx')\n",
@@ -674,19 +660,19 @@
         "df2.drop_duplicates(subset =\"id\", keep = \"first\", inplace = True)\n",
         "print(\"Nov. 2021 - AFTER dropping duplicates: \" + str(df2.shape))\n",
         "\n",
-        "df1.rename(columns={'name_x':'name'}, inplace=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "irQzACXYzcca"
-      },
-      "outputs": [],
-      "source": [
-        "closed_dict = set(only_in_2020['id'])\n",
-        "new_dict = set(only_in_2021['id'])"
+        "df1.rename(columns={'name_x':'name'}, inplace=True)\n",
+        "\n",
+        "in_May2021_not_Nov2021 = df1.merge(df2, how = 'outer' ,indicator=True).loc[lambda x : x['_merge']=='left_only']\n",
+        "not_May2021_in_Nov2021 = df1.merge(df2, how = 'outer' ,indicator=True).loc[lambda x : x['_merge']=='right_only']\n",
+        "# occurs in both datastes\n",
+        "both_in_May2021_Nov2021 = df1.merge(df2, how = 'outer' ,indicator=True).loc[lambda x : x['_merge']=='both']\n",
+        "\n",
+        "print(\"closed: \" + str(in_May2021_not_Nov2021.shape))\n",
+        "print(\"new: \" + str(not_May2021_in_Nov2021.shape))\n",
+        "\n",
+        "closed_dict = set(in_May2021_not_Nov2021['id'])\n",
+        "new_dict = set(not_May2021_in_Nov2021['id'])\n",
+        "open_or_closed_before_now_open = set(both_in_May2021_Nov2021['id'])"
       ]
     },
     {
