Export excel files with data comparisons

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -695,7 +695,7 @@
         }
       ],
       "source": [
-        "# iterate through 2020 dataset and clasify them as closed and open\n",
+        "# iterate through May 2021 dataset and clasify them as closed and open\n",
         "openClose = []\n",
         "\n",
         "for index, row in May2021.iterrows():\n",
@@ -704,15 +704,14 @@
         "  else:\n",
         "    openClose.append('Open')\n",
         "\n",
-        "May2021.insert(0, \"2021 Assessment\", openClose, True)\n",
+        "May2021.insert(May2021.shape[1], \"Nov. 2021 Status\", openClose, True)\n",
         "\n",
-        "May2021.to_excel('Yelp2020_Reassessment.xlsx')\n",
+        "May2021.to_excel('Yelp_May2021_Reassessment_in_Nov2021.xlsx')\n",
         "\n",
         "# iterate through 2021 dataset and isolate the \"new\" restaurants\n",
         "# keep the first appearing category (alphabetical order)\n",
-        "Nov2021.drop_duplicates(subset =\"id\",\n",
-        "                     keep = \"first\", inplace = True)\n",
         "newOld = []\n",
+        "statusDetails2021 = []\n",
         "\n",
         "for index, row in Nov2021.iterrows():\n",
         "  if row['id'] in new_dict:\n",
@@ -720,10 +719,10 @@
         "  else:\n",
         "    newOld.append('Old')\n",
         "\n",
-        "Nov2021.insert(0, \"2021 Assessment\", newOld, True)\n",
+        "Nov2021.insert(Nov2021.shape[1], 'Nov. 2021 Status', newOld, True)\n",
+        "Nov2021.to_excel('Yelp_Nov2021_Reassessment.xlsx')\n",
         "\n",
-        "Nov2021.to_excel('Yelp2021_Reassessment.xlsx')\n",
-        "\n",
+        "# Nov2021 = Nov2021.drop(Nov2021[Nov2021['Nov. 2021 Status']=='Old'].index)\n",
         "print(Nov2021.shape)\n"
       ]
     }
