Add Nov. 2021 status details and export excel assessments

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -725,6 +725,74 @@
         "# Nov2021 = Nov2021.drop(Nov2021[Nov2021['Nov. 2021 Status']=='Old'].index)\n",
         "print(Nov2021.shape)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "combinedNov2021 = pd.read_excel('YELP_Nov_2021.xlsx')\n",
+        "new2021StatusDetails = []\n",
+        "\n",
+        "print('Nov2021 columns:', combinedNov2021.columns.to_list())\n",
+        "print(combinedNov2021.shape)\n",
+        "\n",
+        "for index, row in combinedNov2021.iterrows():\n",
+        "    if row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Open - Open before May 2020. Remain open in May 2021.':\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; remain open in Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Closed - Open before May 2020. Remain open in November 2020. Closed by May 2021.':\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; remain open in Nov. 2020; temporarily closed in May 2021; reopened by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Open - Open before May 2020. Temporarily closed by November 2020. Open in May 2021.':\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; temporarily closed by Nov. 2020; reopened by May 2021; remain open in Nov. 2021')\n",
+        "        \n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Closed - Open before May 2020. Closed by November 2020. Remain closed in May 2021.':\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; temporarily closed by Nov. 2020; remain closed in May 2021; reopened by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='New - Newly opened (May 2020 - November 2020). Remain open in May 2021.':\n",
+        "        new2021StatusDetails.append('New - Newly opened (May-Nov. 2020); remain open in May 2021 and Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Closed - Newly opened (May 2020 - November 2020). Closed by May 2021.':\n",
+        "        new2021StatusDetails.append('Open - Newly opened (May-Nov. 2020); temporarily closed by May 2021; reopened by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='New - Newly opened (November 2020 - May 2021). Remain open in May 2021.':\n",
+        "        new2021StatusDetails.append('New - Newly opened (Nov. 2020-May 2021); remain open in Nov. 2021')\n",
+        "                \n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='Open - Open before May 2020. Remain open in May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Open before May 2020; remain open in May 2021; closed by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='Closed - Open before May 2020. Remain open in November 2020. Closed by May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Open before May 2020; remain open in Nov. 2020; closed by May 2021; remain closed by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='Open - Open before May 2020. Temporarily closed by November 2020. Open in May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Open before May 2020; temporarily closed by Nov. 2020; reopened by May 2021; closed by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='Open - Open before May 2020. Temporarily closed by November 2020. Open in May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Open before May 2020; temporarily closed by Nov. 2020; reopened by May 2021; closed by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='Closed - Open before May 2020. Closed by November 2020. Remain closed in May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Open before May 2020; closed by Nov. 2020; remain closed in May 2021 and Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='New - Newly opened (May 2020 - November 2020). Remain open in May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Newly opened (May-Nov. 2020); remain open in May 2021; closed by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='Closed - Newly opened (May 2020 - November 2020). Closed by May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Newly opened (May-Nov. 2020); closed by May 2021; remain closed in Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Closed' and row['May 2021 Status Details']=='New - Newly opened (November 2020 - May 2021). Remain open in May 2021.':\n",
+        "        new2021StatusDetails.append('Closed - Newly opened (Nov. 2020-May 2021); closed by Nov. 2021')\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='New':\n",
+        "        new2021StatusDetails.append('New - Newly opened (May 2021-Nov. 2021)')\n",
+        "        row['Status'] = 'Nov. 2021'\n",
+        "\n",
+        "combinedNov2021.insert(combinedNov2021.shape[1], \"Nov. 2021 Status Details\", new2021StatusDetails, True)\n",
+        "print(combinedNov2021.shape)\n",
+        "\n",
+        "combinedNov2021.to_excel('NEW_Nov2021_Reassessment.xlsx')"
+      ]
     }
   ],
   "metadata": {
