Fix error in category naming

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -791,7 +791,20 @@
         "combinedNov2021.insert(combinedNov2021.shape[1], \"Nov. 2021 Status Details\", new2021StatusDetails, True)\n",
         "print(combinedNov2021.shape)\n",
         "\n",
-        "combinedNov2021.to_excel('NEW_Nov2021_Reassessment.xlsx')"
+        "combinedNov2021.to_excel('NEW_Nov2021_Reassessment.xlsx')\n",
+        "\n",
+        "categories = []\n",
+        "\n",
+        "for index, row in combinedNov2021.iterrows():\n",
+        "    if row['Nov. 2021 Status']=='New':\n",
+        "        category = row['categories_x']\n",
+        "        categories.append(category[category.rfind('\\': \\'')+4:category.rfind('\\'}]')])\n",
+        "\n",
+        "df = pd.DataFrame({'col':categories})\n",
+        "df.to_excel('categories.xlsx')\n",
+        "\n",
+        "string = '[{\\'alias\\': \\'portuguese\\', \\'title\\': \\'Portuguese\\'}, {\\'alias\\': \\'bbq\\', \\'title\\': \\'Barbeque\\'}]'\n",
+        "print(string[string.rfind('\\': \\'')+4:string.rfind('\\'}]')])"
       ]
     }
   ],
