Remove and update duplicate entries from new to closed status

--- a/Yelp_restaurant_closures.ipynb
+++ b/Yelp_restaurant_closures.ipynb
@@ -767,7 +767,35 @@
         "print(combinedNov2021.shape)\n",
         "\n",
         "for index, row in combinedNov2021.iterrows():\n",
-        "    if row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Open - Open before May 2020. Remain open in May 2021.':\n",
+        "    if row['Nov. 2021 Status']=='New' and row['id'] in new_duplicates:\n",
+        "        combinedNov2021.drop(index, inplace=True)\n",
+        "        new_duplicates.remove(row['id'])\n",
+        "    \n",
+        "    elif row['id'] in a:\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; remain open in Nov. 2021')\n",
+        "        a.remove(row['id'])\n",
+        "    \n",
+        "    elif row['id'] in b:\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; remain open in Nov. 2021')\n",
+        "        b.remove(row['id'])\n",
+        "    \n",
+        "    elif row['id'] in c:\n",
+        "        new2021StatusDetails.append('Open - Open before May 2020; temporarily closed by Nov. 2020; reopened by May 2021; remain open in Nov. 2021')\n",
+        "        c.remove(row['id'])\n",
+        "    \n",
+        "    elif row['id'] in d:\n",
+        "        new2021StatusDetails.append('New - Newly opened (Nov. 2020-May 2021); remain open in Nov. 2021')\n",
+        "        d.remove(row['id'])\n",
+        "    \n",
+        "    elif row['id'] in e:\n",
+        "        new2021StatusDetails.append('New - Newly opened (May-Nov. 2020); remain open in May 2021 and Nov. 2021')\n",
+        "        e.remove(row['id'])\n",
+        "    \n",
+        "    elif row['id'] in f:\n",
+        "        new2021StatusDetails.append('New - Newly opened (May-Nov. 2020); remain open in May 2021 and Nov. 2021')\n",
+        "        f.remove(row['id'])\n",
+        "\n",
+        "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Open - Open before May 2020. Remain open in May 2021.':\n",
         "        new2021StatusDetails.append('Open - Open before May 2020; remain open in Nov. 2021')\n",
         "\n",
         "    elif row['Nov. 2021 Status']=='Open' and row['May 2021 Status Details']=='Closed - Open before May 2020. Remain open in November 2020. Closed by May 2021.':\n",
